--- a/public/style.css
+++ b/public/style.css
@@ -11,20 +11,35 @@ body {
 	font-family: Cantarell, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-section {
+:is(header, section) > .inner {
 	max-width: 750px;
 	margin: auto;
 }
+
+h3, h4 {
+	margin: 0;
+}
+
+
+/* HEADER */
+
+header {
+	text-align: center;
+	margin: 5rem auto;
+}
+
+header svg {
+	max-width: 50px;
+}
+
+
+/* GROUP */
 
 .group {
 	background: #191c24;
 	border: 1px solid rgb(33 36 45);
 	margin: 10px 0;
 	border-radius: var(--border-radius);
-}
-
-h3, h4 {
-	margin: 0;
 }
 
 .group .item {
@@ -53,7 +68,7 @@ h3, h4 {
 	flex-direction: column;
 }
 
-.monitor header {
+.monitor .header {
 	display: grid;
 	align-items: center;
 	gap: 10px;
