--- a/view/group.twig
+++ b/view/group.twig
@@ -1,11 +1,11 @@
 <div class="group">
 	<div class="inner">
-		<header class="item">
+		<div class="item">
 			<div class="inner">
 				<h3>{{ group.name }}</h3>
 			</div>
-		</header>
-		{% for monitor in group.monitorList %}
+		</div>
+		{% for monitor in group.monitors %}
 			{{ include("./monitor.twig") }}
 		{% endfor %}
 	</div>
