--- a/view/heartbeats.twig
+++ b/view/heartbeats.twig
@@ -1,11 +1,11 @@
 <div class="heartbeats">
 	<div class="items">
-		{% for heartbeat in heartbeats %}
+		{% for heartbeat in monitor.heartbeats %}
 			<div class="status-{{ heartbeat.status }}"></div>
 		{% endfor %}	
 	</div>
 	<div class="time">
-		<div>{{ (heartbeats | first).time | timeago((heartbeats | last).time) }}</div>
+		<div>{{ (monitor.heartbeats | first).time | timeago((monitor.heartbeats | last).time) }}</div>
 		<div>now</div>
 	</div>
 </div>
