Improved data model & added header

--- a/view/index.twig
+++ b/view/index.twig
@@ -8,6 +8,7 @@
 		<link rel="icon" href="/icon.png" type="image/png">
 	</head>
 	<body>
+		{{ include('./header.twig') }}
 		<section>
 			<div class="inner">
 				<h1>{{ page.title }}</h1>
