--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ body {
 	color: #fff;
 	background-color: #0f121a;
 	font-family: Cantarell, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin: 0;
 }
 
 :is(header, section) > .inner {
@@ -25,7 +26,38 @@ h3, h4 {
 
 header {
 	text-align: center;
+}
+
+header .inner {
 	margin: 5rem auto;
+}
+
+header::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: radial-gradient(circle at 50% 0, var(--color) 0, transparent 400px);
+	opacity: .1;
+	z-index: -1;
+}
+
+header.all {
+	--color: var(--green-color);
+}
+
+header.some {
+	--color: var(--yellow-color);
+}
+
+header.none {
+	--color: var(--red-color);
+}
+
+header svg {
+	color: var(--color);
 }
 
 header svg {
@@ -39,6 +71,7 @@ header svg {
 	background: #191c24;
 	border: 1px solid rgb(33 36 45);
 	margin: 10px 0;
+	padding: 10px;
 	border-radius: var(--border-radius);
 }
 
@@ -47,12 +80,22 @@ header svg {
 	border-radius: var(--border-radius);
 }
 
+.group .item > .inner {
+	margin: 10px;
+}
+
 .group .item:hover {
 	background-color: #fff1;
 }
 
-:is(.group, .item) > .inner {
-	margin: 10px;
+.group > .header > .inner {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.group > .header .status {
+	opacity: .4;
 }
 
 
