--- a/view/group.twig
+++ b/view/group.twig
@@ -1,12 +1,11 @@
 <div class="group">
-	<div class="inner">
-		<div class="item">
-			<div class="inner">
-				<h3>{{ group.name }}</h3>
-			</div>
+	<div class="header item">
+		<div class="inner">
+			<h3>{{ group.name }}</h3>
+			<div class="status">{{ group.online }} / {{ group.monitors | length }}</div>
 		</div>
-		{% for monitor in group.monitors %}
-			{{ include("./monitor.twig") }}
-		{% endfor %}
 	</div>
+	{% for monitor in group.monitors %}
+		{{ include("./monitor.twig") }}
+	{% endfor %}
 </div>
