--- a/view/index.twig
+++ b/view/index.twig
@@ -5,13 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ page.title }}</title>
 		<link rel="stylesheet" href="/style.css">
-		<link rel="icon" href="/icon.png" type="image/png">
+		<link rel="icon" href="/icon.webp" type="image/webp">
 	</head>
 	<body>
 		{{ include('./header.twig') }}
 		<section>
 			<div class="inner">
-				<h1>{{ page.title }}</h1>
 				{% for group in groups %}
 					{{ include('./group.twig') }}
 				{% endfor %}
