--- a/view/monitor.twig
+++ b/view/monitor.twig
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 		{% if monitor.opt.rich %}
-			{{ include('./heartbeats.twig') }}
+			{{ include("./heartbeats.twig") }}
 		{% endif %}
 	</div>
 </div>
