--- a/public/style.css
+++ b/public/style.css
@@ -77,7 +77,6 @@ header::after {
 }
 
 header .icon {
-	color: rgb(var(--color));
 	border-radius: 50%;
 	max-width: 50px;
 	padding: 5px;
@@ -147,7 +146,6 @@ footer {
 }
 
 .monitor .icon {
-	color: rgb(var(--color));
 	display: flex;
 }
 
@@ -162,9 +160,6 @@ footer {
 .heartbeats {
 	display: flex;
 	gap: 0px;
-	height: 5px;
-	opacity: .4;
-	transition: all .3s;
 }
 
 .heartbeats .tooltip {
@@ -216,7 +211,9 @@ footer {
 	cursor: pointer;
 	position: relative;
 	flex: 1;
-	background-color: rgb(var(--color));
+	height: 5px;
+	transition: background-color .3s, height .3s;
+	background-color: rgb(var(--color), .4);
 }
 
 .heartbeats .beat:last-child {
@@ -235,9 +232,9 @@ footer {
 	opacity: 1;
 }
 
-.monitor:hover .heartbeats {
-	opacity: 1;
+.monitor:hover .heartbeats .beat {
 	height: 25px;
+	background-color: rgb(var(--color));
 }
 
 
