--- a/view/group.twig
+++ b/view/group.twig
@@ -1,5 +1,5 @@
-<div class="group">
-	<div class="header item">
+<div class="card group">
+	<div class="inner header">
 		<h3>{{ group.name }}</h3>
 		<div class="status">{{ group.stats[1] + group.stats[3] }} / {{ group.monitors | length }}</div>
 	</div>
