--- a/view/monitor.twig
+++ b/view/monitor.twig
@@ -1,5 +1,5 @@
 {% set status = monitor.last.status %}
-<div class="item monitor status-{{ status }}">
+<div class="inner monitor status-{{ status }}">
 	<div class="header">
 			<img class="icon" src="{{ status | statusicon }}" />
 		<h4>
