--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 
 	--title-color: 255, 255, 255;
 	--text-color: 177, 177, 177;
-	--bg-color: 15, 18, 26;
+	--bg-color: 15, 18, 28;
 
 	--card-bg-color: 35, 39, 49;
 	--card-border-color: 33, 36, 45;
@@ -13,6 +13,8 @@
 	--success-color: 16, 185, 129;
 	--warning-color: 255, 187, 109;
 	--maintenance-color: 149, 117, 205;
+
+	--site-width: 750px;
 
 }
 
@@ -34,7 +36,7 @@ html, body {
 }
 
 :is(header, section, footer) > .inner {
-	max-width: 750px;
+	max-width: var(--site-width);
 	margin: 40px auto;
 	padding: 0 10px;
 }
@@ -62,19 +64,8 @@ header {
 	text-align: center;
 }
 
-header .inner {
+header > .inner {
 	margin: 5rem auto;
-}
-
-header::after {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 450px;
-	background-image: radial-gradient(circle at 50% 0, rgb(var(--color), .2) 0, transparent 400px);
-	z-index: -1;
 }
 
 header .icon {
@@ -102,7 +93,7 @@ footer {
 
 /* GROUP */
 
-.group {
+.card {
 	background: rgb(var(--card-bg-color), .5);
 	border: 1px solid rgb(var(--card-border-color));
 	margin: 10px 0;
@@ -110,22 +101,22 @@ footer {
 	border-radius: var(--border-radius);
 }
 
-.group .item {
+.card > .inner {
 	padding: 10px;
 	border-radius: var(--border-radius);
 }
 
-.group .item:hover {
-	background-color: #fff1;
-}
-
-.group > .header {
+.card > .inner.header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 
-.group > .header .status {
+.group .monitor:hover {
+	background-color: #fff1;
+}
+
+.group > .inner.header .status {
 	opacity: .7;
 }
 
