--- a/view/nav.twig
+++ b/view/nav.twig
@@ -1,3 +1,4 @@
+<input type="checkbox" id="menu-toggle" />
 <nav>
 	<div class="inner">
 		<div class="logo">
@@ -21,6 +22,9 @@
 				{{ nav.button.text }}
 			</a>
 			{% endif %}
+		</div>
+		<label for="menu-toggle" class="menu">
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m6 9l6 6l6-6"/></svg>
 		</div>
 	</div>
 </nav>
