--- a/view/nav.twig
+++ b/view/nav.twig
@@ -1,14 +1,14 @@
 <input type="checkbox" id="menu-toggle" />
 <nav>
 	<div class="inner">
-		<div class="logo">
+		<a class="logo" href="/">
 			{% if nav.logo %}
 			<img src="{{ nav.logo }}" alt="Logo">
 			{% endif %}
 			{% if nav.title %}
 			<div>{{ nav.title }}</div>
 			{% endif %}
-		</div>
+		</a>
 		<div class="items">
 			{% for text, link in nav.links %}
 			<a href="{{ link }}">
