Changed footer link

--- a/view/footer.twig
+++ b/view/footer.twig
@@ -1,5 +1,5 @@
 <footer>
 	<div class="inner">
-		{{ "footer.poweredby" | t({link: 'https://github.com/FZnachor/Uptime-Status'}) | raw }}
+		{{ "footer.poweredby" | t({link: 'https://go.cdsp.cz/uptime-status'}) | raw }}
 	</div>
 </footer>
